<resources>
    <string name="app_name">You + Healthy</string>
    <string name="mi_next_tasks">Next Tasks</string>
    <string name="mi_manage_tasks">Manage Tasks</string>
    <string name="mi_manage_data">Manage Data</string>
    <string name="cb_event_task">Event</string>
    <string name="cb_routine_task">Routine</string>
    <string name="cb_sport_task">Sport</string>
    <string name="cb_medicine_task">Medicine</string>
    <string name="cb_medic_task">Medic</string>
    <string name="et_description">Description</string>
    <string name="et_date">Date (yyyy-MM-dd)</string>
    <string name="et_time">Time (HH:mm)</string>
    <string name="bt_save">Save</string>
    <string name="bt_delete">Delete</string>
    <string name="et_cycle">Repeat every … hour(s)</string>
    <string name="et_repeat_times">Repetitions</string>
    <string name="et_diagnostic">Diagnostic</string>
    <string name="tb_doctor">Doctor</string>
    <string name="et_name_doctor">Name</string>
    <string name="et_speciality_doctor">Speciality</string>
    <string name="et_dose_medicine">Dose</string>
    <string name="db_exception_insert">An error occurred during the insertion!</string>
    <string name="db_exception_update">An error occurred during the update!</string>
    <string name="db_exception_delete">An error occurred during the deletion!</string>
    <string name="db_exception_query">An error occurred during the query!</string>
    <string name="db_exception_not_found">Resource not found!</string>
    <string name="dialog_error_title">Something went wrong!</string>
    <string name="toast_insert_update_positive">Resource update/created!</string>
    <string name="toast_delete_positive">Resource deleted!</string>
    <string name="bt_ok">OK</string>
    <string name="form_exception">Invalid input data!</string>
    <string name="notification_content_tap">Tap to more</string>
    <string name="notification_content">Tap to clear</string>
    <string name="bt_trainings">Trainings</string>
    <string name="et_result">Result</string>
    <string name="notification_permission">Post notifications permission is required</string>
    <string name="schedule_exception">An error occurred when retrieving schedule data</string>
</resources>