<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutMedicine"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.MedicineFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clMedicine"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/etNameMedicine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:ems="10"
            android:hint="@string/et_name_doctor"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etDoseMedicine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:ems="10"
            android:hint="@string/et_dose_medicine"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNameMedicine" />

        <Button
            android:id="@+id/btDeleteMedicine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="75dp"
            android:text="@string/bt_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etDoseMedicine" />

        <Button
            android:id="@+id/btSaveMedicine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="150dp"
            android:text="@string/bt_save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etDoseMedicine" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>